# Redraw-3d

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  usage.md
docs/plans/: 2026-02-10-perception-upper-bound-brainstorm.md
scripts/: build_parallel.py
scripts/lib/: __init__.py  gpu_worker.py  merger.py  multi_gpu_builder.py
src/ordinal_spatial/: __init__.py
src/ordinal_spatial/agents/: vlm_constraint_agent.py
src/ordinal_spatial/agents/prompts/: constraint_extraction.py
src/ordinal_spatial/baselines/: __init__.py
src/ordinal_spatial/cli/: __init__.py  baseline.py  benchmark.py  validate.py
src/ordinal_spatial/dsl/: schema.py
src/ordinal_spatial/evaluation/: comparison.py  constraint_diff.py
src/ordinal_spatial/generation/: constraint_extractor.py
src/ordinal_spatial/rendering/: __init__.py  blender_utils.py  render_images.py  render_multiview.py  setup_blender5.sh
src/ordinal_spatial/scripts/: __init__.py  build_benchmark.py  run_baseline.py  validate_benchmark.py
src/ordinal_spatial/tasks/: t2_extraction.py  t3_reconstruction.py
src/ordinal_spatial/utils/: metadata.py
tests/: test_comparison.py  test_metadata_utils.py  test_multiview_config.py  test_view_constraints.py  test_world_constraints.py
